--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -784,7 +784,7 @@ function showSortIcons() {
 }
 <?if ($nchanCom):?>
 function ca_openPlugin(cmd,title,plg,func) {
-  setTimeout(function(){openPlugin(cmd,title,plg,func);},250);
+  setTimeout(function(){openPlugin(cmd,title,plg,func,"");},250);
 }
 <?endif;?>
 
@@ -822,7 +822,9 @@ function updateContent(button) {
 			$.removeCookie("ca_plugininstallpending");
 			myCloseAlert();
 	<?if ($nchanCom):?>
-			ca_openPlugin('multiplugin install '+plugins,"<?tr('Install Plugin Applications')?>",'','refresh');
+			post({action:'saveMultiPluginPending',plugin:plugins},function(data) {
+				ca_openPlugin('multiplugin install '+plugins,"<?tr('Install Plugin Applications')?>",'','refresh');
+			});
 	<?else:?>
 			openBox('/plugins/<?=$plugin?>/scripts/installMultiPlugin.php&arg1='+plugins,"<?tr('Install Plugin Applications')?>",600,900,true);
 	<?endif;?>
@@ -1197,7 +1199,9 @@ function actuallyInstallPlugin(pluginURL,update=false,comment="") {
 					pluginURL.replace("&deprecated","");
 				}
 <?if ($nchanCom):?>
-				ca_openPlugin('plugin '+type+' '+pluginURL,title,'',postFunction);
+				post({action:'saveMultiPluginPending',plugin:pluginURL},function(data) {
+					ca_openPlugin('plugin '+type+' '+pluginURL,title,'',postFunction);	
+				});
 <?else:?>
 				openBox('/plugins/community.applications/scripts/pluginInstall.php&arg1='+type+'&arg2='+pluginURL,title,600,900,true,postFunction);
 <?endif;?>
@@ -1220,6 +1224,7 @@ function actuallyInstallPlugin(pluginURL,update=false,comment="") {
 		}
 <?if ($nchanCom):?>
 		ca_openPlugin('plugin '+type+' '+pluginURL,title,'',postFunction);
+		
 <?else:?>
 		openBox('/plugins/community.applications/scripts/pluginInstall.php&arg1='+type+'&arg2='+pluginURL,title,600,900,true,postFunction);
 <?endif;?>
@@ -1928,7 +1933,6 @@ function installMulti() {
 			});
 <?if ($nchanCom):?>
 				post({action:'saveMultiPluginPending',plugin:plugin},function(data) {
-					alert(plugin);
 					ca_openPlugin('multiplugin install '+plugin,tr('Install '+makePlural("Application",pluginCount)),'','refresh');
 				});
 <?else:?>
