--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -1181,7 +1181,7 @@ function actuallyInstallPlugin(pluginURL,update=false,comment="") {
 			allowOutsideClick: true,
 			showConfirmButton: true,
 			showCancelButton: true,
-			confirmButtonText: "<?tr("OK")?>",
+			confirmButtonText: "<?tr("Install")?>",
 			cancelButtonText: "<?tr("CANCEL")?>",
 			animation: false,
 			type: "warning",
