--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -1078,9 +1078,14 @@ function getContent(init,category,description,newApp,startupDisplay) {
 			updateDisplay(result.display);
 			if ( initialize ) {
 				populateAutoComplete();
+				downloadStatistics();
 			}
 		});
 	}
+}
+
+function downloadStatistics() {
+	postNoSpin({action:'downloadStatistics'});
 }
 
 function populateAutoComplete() {
