--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -207,6 +207,7 @@ $(function(){
 	<?else:?>
 	// don't run this through the wrapper so that if it hangs up it won't delay anything else
 	$.post("/plugins/<?=$plugin?>/include/exec.php",{action:'getPortsInUse'},function(data) {
+		console.log(data);
 		var ret = JSON.parse(data);
 		portsInUse = ret.portsInUse;
 		console.log("Ports In Use:" + portsInUse);
@@ -2217,6 +2218,7 @@ function postNoSpin(options,callback) {
 	if ( typeof callback === "function" ) {
 		$.post(URL,options,function(retval){
 			try {
+				console.log(retval);
 				var result = JSON.parse(retval);
 				if (result.error) {
 					alert(result.error);
