Unraid version could be wrong in debugging

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -17,6 +17,7 @@ $plugin = "community.applications";
 
 $cfg = parse_plugin_cfg($plugin);
 $cfg['dockerSearch'] = "yes";
+$cfg['unRaidVersion'] = $var['version'];
 $caSettings = $cfg;
 
 require_once "$docroot/plugins/dynamix.docker.manager/include/DockerClient.php";
