--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -40,15 +40,8 @@ $diagnosticsFile = htmlspecialchars(str_replace(' ','_',strtolower($var['NAME'])
 
 if ( $cfg['maxPerPage'] < 24 ) $cfg['maxPerPage'] = 24;
 
-if ( ! is_file($caPaths['warningAccepted']) ) 
-	$firstRun = "true";
-else
-	$firstRun = "false";
-
-if ( ! is_file($caPaths['pluginWarning']) )
-	$pluginWarning = "false";
-else
-	$pluginWarning = "true";
+$firstRun = is_file($caPaths['warningAccepted']) ? "false" : "true";
+$pluginWarning = is_file($caPaths['pluginWarning']) ? "true": "false";
 
 if ( ! is_file($caPaths['docker_cfg']) ) {
 	exec("logger -t 'Community Applications' 'Fatal Flash Drive Error: /boot/config/docker.cfg does not exist'");
