Fiixed: Setting a fav repo wouldn't update display with the hearts until a page refresh

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -2570,8 +2570,9 @@ function setFavourite(button) {
 			removeBannerWarning(repoBanner);
 			repoBanner = false;
 		},5000);
+		alert(data.fav);
 		$(".favCardBackground").each(function() {
-			if ( $(this).data("repository") == data.fav )
+			if ( $(this).data("repository") == data.fav.replace("'","") )
 				$(this).show("slow");
 			else
 				$(this).hide("slow");
