--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -3072,7 +3072,7 @@ function setupActionCentre() {
 		if ( ret.status == "action" ) {
 			if ( !$(".actionCentre").is(":visible") ) {
 				if ( ! actionCentreRestoreState ) {
-					acBanner = addBannerWarning("<?tr("Action Centre Enabled")?>",false,true);
+					acBanner = addBannerWarning("<?tr("Action Centre Enabled")?>",false);
 					setTimeout(function() {
 						removeBannerWarning(acBanner);
 					},10000);
