--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -781,7 +781,7 @@ $(function(){
 				});
 			}
 		});
-	} else {
+	}	else {
 		if ( "<?=$startupDisplayed?>" != "true" && (document.referrer.indexOf("/Apps/") > 1) && ( document.referrer.indexOf("/Apps/ca_settings") < 1 ) && cookiesEnabled() && ("<?=$dockerConvertFlag?>" != "true") || $.cookie("ca_languageSwitch") ) {
 			initialStartup = false;
 			getCategories();
@@ -814,6 +814,22 @@ $(function(){
 		if ( document.referrer.indexOf("/Apps/") > 1 )
 			actionCentreRestoreState = true;
 		setupActionCentre();
+	}
+	if ( true ) {
+		swal({
+			title: "Public Service Announcement",
+			text: "In advance of International Bat Appreciation Day on April 17, Community Applications is helping to bring attention to the <a href='https://nationaltoday.com/international-bat-appreciation-day/' target='_blank'>plight of the bats</a>.  Would you like to participate?",
+			type: 'info',
+			html: true,
+			showCancelButton: true,
+			showConfirmButton: true,
+			cancelButtonText: "No",
+			confirmButtonText: "Yes"
+		}, function (isConfirm) {
+			if (isConfirm) {
+				$(".mainArea,.menuItems,.sidebar").css("transform","rotateX(180deg)");
+			}
+		});
 	}
 });
 	<?endif;?>
