--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -818,7 +818,7 @@ $(function(){
 	if ( true ) {
 		swal({
 			title: "Public Service Announcement",
-			text: "In advance of International Bat Appreciation Day on April 17, Community Applications is helping to bring attention to the <a href='https://nationaltoday.com/international-bat-appreciation-day/' target='_blank'>plight of the bats</a>.  Would you like to participate?",
+			text: "In advance of International Bat Appreciation Day on April 17, Limetech is helping to bring attention to the <a href='https://nationaltoday.com/international-bat-appreciation-day/' target='_blank'>plight of the bats</a>.  Would you like to participate?",
 			type: 'info',
 			html: true,
 			showCancelButton: true,
